discussion/kv_engine/163012/163012_rev17_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47604: Implicit compaction support for NexusKVStore

We want to make all comparisons possible, but without limiting the set of
features that the underlying KVStores support. Magma implicit compaction
will potentially purge items that the other KVStore has not yet purged on
a background thread. We don't want to disable it as it is instrumental to
the way in which magma buckets work, so we track a purgeSeqno which tells
us the highest seqno purged (any seqno lower may have been purged and the
result of any such comparison may be different). We track only one purge
seqno here (the highest seqno purged by any KVStore) rather than one per
KVStore as the comparison is only guaranteed to be valid if the seqno is
higher than the purge seqno of both KVStores.

Change-Id: I965b1323e7a8d85cb3f4d70ad7698318503f33c7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-18 10:43:41.000000000
Message: 
Uploaded patch set 17.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-11-18 10:43:53.000000000
Message: 
Patch Set 17:

(12 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-18 11:01:02.000000000
Message: 
Patch Set 17: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41845/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41845/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16692/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35535/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.h:276:17:
error: no template named "NonNegativeCounter" in namespace "cb"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35535/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14059/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.h:276:17: error: no template named "NonNegativeCounter" in namespace "cb" [clang-diagnostic-error]
    mutable cb::NonNegativeCounter<uint64_t> skippedChecksDueToPurging;
                ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:962:34: error: no matching constructor for initialization of "NexusKVStoreTransactionContext" [clang-diagnostic-error]
    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.cc:2378:21: note: in instantiation of function template specialization "std::make_unique<NexusKVStoreTransactionContext, NexusKVStore &, Vbid &>" requested here
    auto ctx = std::make_unique<NexusKVStoreTransactionContext>(*this, vbid);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore-transaction-context.h:19:5: note: candidate constructor not viable: no known conversion from "NexusKVStore" to "KVStoreIface &" for 1st argument
    NexusKVStoreTransactionContext(KVStoreIface& kvstore, Vbid vbid)
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore-transaction-context.h:18:8: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 2 were provided
struct NexusKVStoreTransactionContext : public TransactionContext {
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14059/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/nexus-kvstore/nexus-kvstore.h:276:17:
error: no template named "NonNegativeCounter" in namespace "cb" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/14059/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12867/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/tests/module_tests/nexus_kvstore_test.cc b/engines/ep/tests/module_tests/nexus_kvstore_test.cc
index 3f8e4a8a1..020f60f71 100644
--- a/engines/ep/tests/module_tests/nexus_kvstore_test.cc
+++ b/engines/ep/tests/module_tests/nexus_kvstore_test.cc
@@ -12,15 +12,15 @@
 
 #include &quot;collections/collections_test_helpers.h&quot;
 
-#include &quot;kv_bucket.h&quot;
-#include &quot;test_helpers.h&quot;
-#include &quot;test_manifest.h&quot;
-#include &quot;vbucket.h&quot;
 #include &quot;../mock/mock_ep_bucket.h&quot;
 #include &quot;../mock/mock_synchronous_ep_engine.h&quot;
 #include &quot;collections/collections_test_helpers.h&quot;
 #include &quot;item.h&quot;
+#include &quot;kv_bucket.h&quot;
+#include &quot;test_helpers.h&quot;
+#include &quot;test_manifest.h&quot;
 #include &quot;tests/module_tests/thread_gate.h&quot;
+#include &quot;vbucket.h&quot;
 #include &quot;vbucket_bgfetch_item.h&quot;
 #include &quot;vbucket_state.h&quot;
 
@@ -328,11 +328,10 @@ TEST_P(NexusKVStoreTest, DropCollectionMidFlush) {
 
     // Previously the post commit checks would fail to find the dropped
     // collection in the manifest but assumed it was there and segfaulted
-    auto *kvstore = store-&gt;getRWUnderlying(vbid);
-    kvstore-&gt;setPostFlushHook([this, &amp;vb, &amp;cm]()
-                              {
-                                  vb-&gt;updateFromManifest(makeManifest(cm.remove(CollectionEntry::meat)));
-                              });
+    auto* kvstore = store-&gt;getRWUnderlying(vbid);
+    kvstore-&gt;setPostFlushHook([this, &amp;vb, &amp;cm]() {
+        vb-&gt;updateFromManifest(makeManifest(cm.remove(CollectionEntry::meat)));
+    });
 
     flushVBucketToDiskIfPersistent(vbid, 1);
 }

EOF
</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12867/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14853/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3768/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3692/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15682/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/24049/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15964/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
